test/corpus/paths.txt
================================================================================
Relative path with single dot
================================================================================

let x = ./foo/bar

--------------------------------------------------------------------------------

(source_file
  (let_binding
    pattern: (binding_pattern
      name: (identifier))
    value: (path_expression)))

================================================================================
Relative path with double dot
================================================================================

let x = ../foo/bar

--------------------------------------------------------------------------------

(source_file
  (let_binding
    pattern: (binding_pattern
      name: (identifier))
    value: (path_expression)))

================================================================================
Standalone double dot
================================================================================

let x = ..

--------------------------------------------------------------------------------

(source_file
  (let_binding
    pattern: (binding_pattern
      name: (identifier))
    value: (path_expression)))

================================================================================
Path with file extension
================================================================================

let x = ./config.json

--------------------------------------------------------------------------------

(source_file
  (let_binding
    pattern: (binding_pattern
      name: (identifier))
    value: (path_expression)))

================================================================================
Path with quoted segment
================================================================================

let x = ./dir/"file with spaces.txt"

--------------------------------------------------------------------------------

(source_file
  (let_binding
    pattern: (binding_pattern
      name: (identifier))
    value: (path_expression)))

================================================================================
Deep relative path
================================================================================

let x = ../../foo/bar/baz.txt

--------------------------------------------------------------------------------

(source_file
  (let_binding
    pattern: (binding_pattern
      name: (identifier))
    value: (path_expression)))

================================================================================
Path with hyphens and at sign
================================================================================

let x = ./my-dir/@scope/pkg

--------------------------------------------------------------------------------

(source_file
  (let_binding
    pattern: (binding_pattern
      name: (identifier))
    value: (path_expression)))

================================================================================
Absolute path
================================================================================

let x = /Dockerfile

--------------------------------------------------------------------------------

(source_file
  (let_binding
    pattern: (binding_pattern
      name: (identifier))
    value: (path_expression)))

================================================================================
Absolute path with multiple segments
================================================================================

let x = /absolute/path/to/file.txt

--------------------------------------------------------------------------------

(source_file
  (let_binding
    pattern: (binding_pattern
      name: (identifier))
    value: (path_expression)))

================================================================================
Standalone root path
================================================================================

let x = /

--------------------------------------------------------------------------------

(source_file
  (let_binding
    pattern: (binding_pattern
      name: (identifier))
    value: (path_expression)))

================================================================================
Division is not a path
================================================================================

let x = a / b

--------------------------------------------------------------------------------

(source_file
  (let_binding
    pattern: (binding_pattern
      name: (identifier))
    value: (binary_expression
      left: (identifier)
      right: (identifier))))
