test/corpus/statements.txt
================
Import statement
================

import Skyr/Container

---

(source_file
  (import_statement
    (import_path
      (import_fragment)
      (import_fragment))))

================
Multi-segment import
================

import Local/Utils/Network

---

(source_file
  (import_statement
    (import_path
      (import_fragment)
      (import_fragment)
      (import_fragment))))

================
Hyphenated import fragments
================

import my-org/my-repo/Mod

---

(source_file
  (import_statement
    (import_path
      (import_fragment)
      (import_fragment)
      (import_fragment))))

================
Aliased import
================

import Std/Time as T

---

(source_file
  (import_statement
    (import_path
      (import_fragment)
      (import_fragment))
    alias: (identifier)))

================
Aliased hyphenated import
================

import Self/my-file as F

---

(source_file
  (import_statement
    (import_path
      (import_fragment)
      (import_fragment))
    alias: (identifier)))

================
Kebab import fragment with digits
================

import my-2fa/Mod

---

(source_file
  (import_statement
    (import_path
      (import_fragment)
      (import_fragment))))

================
Let binding
================

let x = 42

---

(source_file
  (let_binding
    name: (identifier)
    value: (integer)))

================
Let binding with type annotation
================

let x: Int = 42

---

(source_file
  (let_binding
    name: (identifier)
    type: (type_identifier)
    value: (integer)))

================
Export let binding
================

export let name = "hello"

---

(source_file
  (export_statement
    (let_binding
      name: (identifier)
      value: (string
        (string_content)))))

================
Type declaration
================

type Config { host: Str, port: Int }

---

(source_file
  (type_declaration
    name: (identifier)
    type: (record_type
      (record_type_field
        name: (identifier)
        type: (type_identifier))
      (record_type_field
        name: (identifier)
        type: (type_identifier)))))

================
Export type declaration
================

export type Config { host: Str }

---

(source_file
  (export_type_declaration
    (type_declaration
      name: (identifier)
      type: (record_type
        (record_type_field
          name: (identifier)
          type: (type_identifier))))))

================
Type declaration with type parameters
================

type Pair<A, B> { first: A, second: B }

---

(source_file
  (type_declaration
    name: (identifier)
    (type_parameters
      (type_parameter
        name: (identifier))
      (type_parameter
        name: (identifier)))
    type: (record_type
      (record_type_field
        name: (identifier)
        type: (type_identifier))
      (record_type_field
        name: (identifier)
        type: (type_identifier)))))

================
Annotated statement
================

@test
import Std/Test

---

(source_file
  (annotated_statement
    (annotation
      name: (identifier))
    (import_statement
      (import_path
        (import_fragment)
        (import_fragment)))))

================
Annotation with literal arguments
================

@marks(1, -2.5, "s", true, nil)
let x = 1

---

(source_file
  (annotated_statement
    (annotation
      name: (identifier)
      (annotation_arguments
        (integer)
        (signed_number
          (float))
        (string
          (string_content))
        (boolean)
        (nil)))
    (let_binding
      name: (identifier)
      value: (integer))))

================
Stacked annotations
================

@a @b export let x = 1

---

(source_file
  (annotated_statement
    (annotation
      name: (identifier))
    (annotated_statement
      (annotation
        name: (identifier))
      (export_statement
        (let_binding
          name: (identifier)
          value: (integer))))))
